pkl-core/src/test/files/LanguageSnippetTests/input/errors/reference18.pkl
import "pkl:ref"

import ".../input-helper/errors/ReferencedModuleWithOutputOverride.pkl"

class ModuleSubclass extends ReferencedModuleWithOutputOverride

class D extends ref.Domain {
  function referenceToString(data: Any, path: List<ref.Access>): String = throw("not supported")
}
local d: D = new {}

test = ref.Reference(d, ModuleSubclass, "").output
